--- a/src/pages/friend.astro
+++ b/src/pages/friend.astro
@@ -54,7 +54,7 @@ import FriendCard from "@/components/mdx/FriendCard.astro";
             name="YOO_koishi"
             avatar="https://github.com/YOOkoishi.png"
             description="Code Create Life."
-            url="http://www.yookoishi.com/"
+            url="http://www.blog.yookoishi.com/"
             type="friend"
           />
           <FriendCard
