--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -68,11 +68,8 @@ const displayDate = blog.data.pubDate
         />
       </div>
     </div>
+
+    <!-- 评论系统 -->
+    <Giscus path={`/blog/${blog.slug}`} />
   </MainCard>
 </BaseLayout>
-
-<!-- 评论系统区域 -->
-<div class="w-full max-w-screen-lg mx-auto px-4 mt-12">
-  <h2 class="text-2xl font-bold mb-4">💬 Comments</h2>
-  <Giscus path={`/blog/${blog.slug}`} />
-</div>
