--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -62,7 +62,7 @@ import LinkCard from "@/components/mdx/LinkCard.astro";
 
           <p class="text-base-content/80">
             你好！我是
-            sixdayC，目前大一在读，这里是我的个人博客，用来记录一切我想记录的东西。
+            sixdayC，这里是我的个人博客，用来记录一切我想记录的东西。
           </p>
         </div>
       </section>
@@ -84,11 +84,6 @@ import LinkCard from "@/components/mdx/LinkCard.astro";
                   date: "April 2025",
                   title: "MY BLOG",
                   desc: "创建了我的小站，用来珍惜生命的每一天",
-                },
-                {
-                  date: "March 2025",
-                  title: "第一个完整的团队游戏",
-                  desc: '806-GD的小伙伴们一起开发了《神州物理录》，<a href="https://www.bilibili.com/video/BV1tALUzzExY/?spm_id_from=333.337.search-card.all.click&vd_source=d5be0a99ae786efb89fd911a7a861a82" target="_blank" class="text-blue-500 underline">点击查看详情</a>',
                 },
               ].map((item, i) => (
                 <div class="relative flex gap-4 pb-2 md:pb-0 md:min-w-[250px]">
